--- a/flo_cltv_prediction.ipynb
+++ b/flo_cltv_prediction.ipynb
@@ -1356,6 +1356,7 @@
     "                                                                                   cltv_df['frequency'],\n",
     "                                                                                   cltv_df['recency'],\n",
     "                                                                                   cltv_df['T'])"
+  
    ]
   },
   {
@@ -1370,6 +1371,14 @@
     "                                                                                   cltv_df['frequency'],\n",
     "                                                                                   cltv_df['recency'],\n",
     "                                                                                   cltv_df['T'])"
+    
+    " # The same solution can be achieved with predict ."
+    
+    " cltv_df['exp_purchases_3_month'] = bgf.predict(4*3,\n",
+    "                                                   cltv_df['frequency'],\n",
+    "                                                   cltv_df['recency'],\n",
+    "                                                   cltv_df['T'])"
+    
    ]
   },
   {
