--- a/flo_cltv_prediction.ipynb
+++ b/flo_cltv_prediction.ipynb
@@ -1372,7 +1372,7 @@
     "                                                                                   cltv_df['recency'],\n",
     "                                                                                   cltv_df['T'])"
     
-    " # The same solution can be achieved with predict ."
+    " # Alternative method"
     
     " cltv_df['exp_purchases_3_month'] = bgf.predict(4*3,\n",
     "                                                   cltv_df['frequency'],\n",
